fixed text clipping issues if tweet entered is too long with no spaces

--- a/public/styles/nav.css
+++ b/public/styles/nav.css
@@ -4,7 +4,7 @@ nav {
   background-color: #4056A1;
   width: 100%;
   height: 120px;
-  z-index: 2;
+  z-index: 3;
   padding: 1.5em;
   
 }
